--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "classnames": "^2.2.6",
     "firebase": "^8.0.1",
     "jquery": "^3.5.1",
+    "netlify-lambda": "^2.0.2",
+    "node-fetch": "^2.6.1",
+    "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
